Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63309

REG: Cannot launch Qt Quick Controls on Android

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.10.0 Beta 1
    • 5.10.0 Beta 1
    • Quick: Controls 1
    • None
    • Android 7.0, Pixel C
    • Android
    • 930aea8b9ca59a24838cf7f279653e3b2ee40cee (qtdeclarative), c0dbf5da64e6fc20d6edc59cc849e282e9bfea50 (qtquickcontrols)

    Description

      When launching an application that uses Qt Quick Controls with the current 5.10 branch, I get the following errors:

       
      W libqtbug63172.so: file:///data/data/org.qtproject.example.qtbug63172/qt-reserved-files/qml/QtQuick/Controls/Styles/Android/ButtonStyle.qml:93 ((null)): file:///data/data/org.qtproject.example.qtbug63172/qt-reserved-files/qml/QtQuick/Controls/Styles/Android/ButtonStyle.qml:93:13: LabelStyle is not a type
      E libqtbug63172.so: file:///data/data/org.qtproject.example.qtbug63172/qt-reserved-files/qml/QtQuick/Controls/Private/Control.qml:84 (onStatusChanged): qml: Failed to load Style for Button_QMLTYPE_34(0xcfef5120)
      W libqtbug63172.so: file:///data/data/org.qtproject.example.qtbug63172/qt-reserved-files/qml/QtQuick/Controls/Styles/Android/ButtonStyle.qml:93 ((null)): file:///data/data/org.qtproject.example.qtbug63172/qt-reserved-files/qml/QtQuick/Controls/Styles/Android/ButtonStyle.qml:93:13: LabelStyle is not a type
      E libqtbug63172.so: file:///data/data/org.qtproject.example.qtbug63172/qt-reserved-files/qml/QtQuick/Controls/Private/Control.qml:84 (onStatusChanged): qml: Failed to load Style for Button_QMLTYPE_34(0xe6ed2880)
      W libqtbug63172.so: file:///data/data/org.qtproject.example.qtbug63172/qt-reserved-files/qml/QtQuick/Controls/Button.qml:99 ((null)): file:///data/data/org.qtproject.example.qtbug63172/qt-reserved-files/qml/QtQuick/Controls/Button.qml:99: TypeError: Cannot read property of null
      W libqtbug63172.so: file:///data/data/org.qtproject.example.qtbug63172/qt-reserved-files/qml/QtQuick/Controls/Button.qml:99 ((null)): file:///data/data/org.qtproject.example.qtbug63172/qt-reserved-files/qml/QtQuick/Controls/Button.qml:99: TypeError: Cannot read property of null
      

      And a blank screen. The same application works fine with Qt 5.9.

      Reproducible with this small example:

       
      import QtQuick 2.8
      import QtQuick.Window 2.2
      import QtQuick.Controls 1.4
      
      Window {
          visible: true
          width: 640
          height: 480
          title: qsTr("Hello World")
      
          Button {
              anchors.centerIn: parent
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes